--- a/plans/catalog/templates/catalog/edit_scheme.html
+++ b/plans/catalog/templates/catalog/edit_scheme.html
@@ -11,17 +11,25 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-sm-8">
-      <form id="canvas_form" action="{% url 'add_element' %}" name="{{ plan_id}}" method="POST">
-        {% csrf_token %}
-        <canvas id="canvas" style="border: 1px solid" width="1000" height="700"></canvas>
-      </form>
+      <div class="edit-field">
+        <form id="canvas_form" class="canvas-field" action="{% url 'add_element' %}" name="{{ plan_id}}" method="POST" >
+          {% csrf_token %}
+          <canvas id="canvas" style="border: 1px solid" width="800" height="700" ></canvas>
+        </form>
+      </div>
     </div>
     <div class="col-sm-2">
       <div id="selector" class="btn-group">
         <button id="wall" type="button" class="btn btn-light">Wall</button>
         <!-- <button id="wall_b" type="button" class="btn btn-light">Wall B type</button> -->
+        <button id="none" type="button" class="btn btn-light">Reset</button>
+      </div>
+      <button id="add" type="button" class="btn btn-light">Add</button>
+      <div class="article">
+
       </div>
     </div>
+
   </div>
 </div>
 
