points as model, not finalised

--- a/plans/catalog/templates/catalog/edit_scheme.html
+++ b/plans/catalog/templates/catalog/edit_scheme.html
@@ -61,7 +61,7 @@
 
       <h3>Ростверк</h3>
       <form id="grillage_form">
-          <input type="radio" value="line" checked name="grillage_type" />
+          <input type="radio" value="lined" checked name="grillage_type" />
           <select id="grillage_width" name="grillage_width">
               <option value="-1">adaptive</option>
               <option value="400">400</option>
@@ -69,8 +69,8 @@
               <option value="640">640</option>
             </select>
             <label for="grillage_width">Ростверк</label>
-            <label><input type="radio" value="pillar" name="grillage_type" />Столбик</label>
-            <label><input type="radio" value="plate" name="grillage_type" />Плита</label>
+            <!-- <label><input type="radio" value="pillar" name="grillage_type" />Столбик</label> -->
+            <label><input type="radio" value="plated" name="grillage_type" />Плита</label>
       </form>
       
       <h3>Тип стены</h3>
