before add floor into element

--- a/plans/catalog/templates/catalog/edit_scheme.html
+++ b/plans/catalog/templates/catalog/edit_scheme.html
@@ -54,8 +54,9 @@
         <button id="rounded_wall" type="button" class="btn btn-light">Rounded wall</button>
         <button id="plate" type="button" class="btn btn-light">Plate</button>
         <button id="aperture" type="button" class="btn btn-light">Aperture</button>
-
+        <button id="scaling" type="button" class="btn btn-light">Scale</button>
       </div>
+      
       <button id="add" type="button" class="btn btn-light">Add</button>
       <h3>Тип стены</h3>
       <form id="wall_type_form">
@@ -78,9 +79,25 @@
         <label><input type="radio" value="hollow_plates" name="plate_type" />Плиты ПК</label>
       </form>
 
-      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+      <!-- <h3>Слои элементов</h3>
+      <form id="elements_layes_form">
+        <label><input type="checkbox" value="base" checked name="elements_layes" />Несущие стены</label>
+        <label><input type="checkbox" value="partitions" name="elements_layes" />Перегородки</label>
+        <label><input type="checkbox" value="apertures" name="elements_layes" />Проемы</label>
+        <label><input type="checkbox" value="apertures" name="elements_layes" />Проемы</label>
+      </form> -->
+
+      <!-- <h3>Слои этажей</h3>
+      <form id="floors_layes_form">
+        <label><input id="1_floor_checkbox" type="checkbox" value="1_floor" checked name="floor_layes" />1 этаж</label>
+        <label><input id="2_floor_checkbox"type="checkbox" value="2_floor" name="floor_layes" />2 этаж</label>
+        <label><input id="3_floor_checkbox"type="checkbox" value="3_floor" name="floor_layes" />3 этаж</label>
+        <label><input id="roof_checkbox"type="checkbox" value="roof" name="floor_layes" />Кровля</label>
+      </form> -->
+
+      <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
           Запустить модальное окно
-        </button>
+        </button> -->
 
     </div>
 
