from summercottage. scaling, moving

--- a/plans/catalog/templates/catalog/edit_scheme.html
+++ b/plans/catalog/templates/catalog/edit_scheme.html
@@ -54,7 +54,8 @@
         <button id="rounded_wall" type="button" class="btn btn-light">Rounded wall</button>
         <button id="plate" type="button" class="btn btn-light">Plate</button>
         <button id="aperture" type="button" class="btn btn-light">Aperture</button>
-        <button id="scaling" type="button" class="btn btn-light">Scale</button>
+        <button id="scale" type="button" class="btn btn-light">Scale</button>
+        <button id="move" type="button" class="btn btn-light">Move</button>
       </div>
       
       <button id="add" type="button" class="btn btn-light">Add</button>
